public class MyMaths {

    static int add(int n1, int n2){
        return (n1 + n2);
    }
}
